2008-01-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/coerce.spad.pamphlet,
	src/algebra/exposed.lsp.pamphlet,
	src/interp/as.boot, src/interp/br-con.boot,
	src/interp/br-data.boot, src/interp/br-util.boot,
	src/interp/cattable.boot, src/interp/c-util.boot,
	src/interp/interop.boot, src/interp/nrunopt.boot,
	src/interp/parsing.lisp: Misc cleanups.

2008-01-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/array1.spad.pamphlet: FlexibleArray,
	IndexedFlexibleArray: Doc fix.

2008-01-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Avoid breakage due to cleanup in r463.
	* src/interp/br-op1.boot: dbShowOp1(): Allow integer
	valued keys.

2008-01-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Avoid referencing build directory when using ECL.
	* src/interp/util.lisp: interpsys-ecl-image-init(): call
	initroot and use value of $spadroot instead of frozen
	build value.

2008-01-07  Aleksej Saushev <asau@inbox.ru>

	Fix bootstrap failure with ECL on NetBSD.
	* src/lisp/fricas-lisp.lisp: For ECL on NetBSD and :unix
	to featues.

2008-01-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/input/intef2.input.pamphlet,
	src/input/intmix2.input.pamphlet: Remove redundant test files.
	src/input/calculus2.input.pamphlet: Remove redundant unused
	tests, fix wrong Laplace examples.
	src/input/Makefile.in: Adjust.

2008-01-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/bootlex.lisp, src/interp/fnew.meta,
	src/interp/fnewmeta.lisp, src/interp/parsing.lisp:
	Scan special chars as symbols.

2008-01-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/input/easter.input.pamphlet: Remove redundant test file.
	src/input/Makefile.in: Adjust.

2008-12-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-output.boot: Remove unused parameter
	to 'SubstWhileDesizing' and 'SubstWhileDesizingList'.

2008-12-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/bootlex.lisp, src/interp/daase.lisp,