@@ -1,3 +1,9 @@
+2008-01-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/algebra/efstruc.spad.pamphlet: Better normalization.
+	src/input/bugs2009.input.pamphlet: New file.
+	src/input/Makefile.in: Adjust.
+
 2008-01-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/algebra/coerce.spad.pamphlet,
